# lab

./: .gitignore  Class.cc  Student.cc  Student.h  main.cc
debug2-handout/: .clang-format  .gitignore  CMakeLists.txt  handout.md
debug2-handout/libs/: CMakeLists.txt
debug2-handout/libs/ggml/include/: ggml-alloc.h  ggml-backend.h  ggml-blas.h  ggml-cann.h  ggml-cuda.h  ggml-kompute.h  ggml-metal.h  ggml-rpc.h  ggml-sycl.h  ggml-vulkan.h  ggml.h
debug2-handout/libs/ggml/src/: ggml-aarch64.c  ggml-aarch64.h  ggml-alloc.c  ggml-backend-impl.h  ggml-backend.c  ggml-blas.cpp  ggml-cann.cpp  ggml-common.h  ggml-cpu-impl.h  ggml-impl.h  ggml-kompute.cpp  ggml-quants.c  ggml-quants.h  ggml-rpc.cpp  ggml-sycl.cpp  ggml-vulkan.cpp  ggml.c
debug2-handout/libs/llama_tokenizer/: CMakeLists.txt  llama-vocab.cpp  llama-vocab.h  unicode-data.cpp  unicode-data.h  unicode.cpp  unicode.h
debug2-handout/src/: CMakeLists.txt  core.cpp  core.hpp  diff.py  main.cpp  tools.hpp
lab2/: CMakeLists.txt  instructions.cpp  instructions.h  main.cpp  memory.cpp  memory.h  registers.cpp  registers.h  simulator.cpp  simulator.h  simulator_utils.cpp  tester.py
lab2/y64-app/: abs-asum-cmov.out  abs-asum-cmov.yo  abs-asum-jmp.out  abs-asum-jmp.yo  asum.out  asum.yo  asumr.out  asumr.yo  cjr.out  cjr.yo  j-cc.out  j-cc.yo  poptest.out  poptest.yo  prog1.out  prog1.yo  prog10.out  prog10.yo  prog2.out  prog2.yo  prog3.out  prog3.yo  prog4.out  prog4.yo  prog5.out  prog5.yo  prog6.out  prog6.yo  prog7.out  prog7.yo  prog8.out  prog8.yo  prog9.yo  pushquestion.out  pushquestion.yo  pushtest.out  pushtest.yo  ret-hazard.out  ret-hazard.yo
lab2/y64-ins/: addq.yo  andq.yo  call.yo  cmove.yo  cmovg.yo  cmovge.yo  cmovl.yo  cmovle.yo  cmovne.yo  halt.out  halt.yo  irmovq.out  irmovq.yo  je.yo  jg.out  jg.yo  jge.yo  jl.yo  jle.yo  jmp.out  jmp.yo  jne.yo  mrmovq.out  mrmovq.yo  nop.out  nop.yo  popq.out  popq.yo  pushq.out  pushq.yo  ret.out  ret.yo  rmmovq.out  rmmovq.yo  rrmovq.out  rrmovq.yo  subq.yo  xorq.out  xorq.yo
lab2/y64-ref/: y64sim-linux-x64  y64sim-mac-arm64
lab3/lab3/: CMakeLists.txt  board.cpp  board.h  canvas.h  disk.h  hanoi.cpp  lab3_test.cpp  node.h  queue.h  queue_impl.h  rod.cpp  rod.h  stack.h  stack_impl.h  unique_ptr.h  unique_ptr_impl.h
lab3/lab3/spec/: lab3.md
lab4/: CMakeLists.txt  Calculator.cpp  Calculator.h  Comparator.h  Tree.cpp  Tree.h  TreeNode.cpp  TreeNode.h  main.cpp
lab4/build2/: 4.txt  5.txt  6.txt  CMakeCache.txt  Makefile  cmake_install.cmake
lab4/spec/: lab4.md
(+70 files in other folders)
